--- a/css/reset.css
+++ b/css/reset.css
@@ -5,9 +5,9 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-html{
+/* html{
 	font-size: 16px;
-}
+} */
 body{
   font-family: Verdana, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
 }
